Add GitHub Actions packaging with jlink + jpackage